# foundry-browser-use

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENCE  README.md  SECURITY.md  agent.py  biome.json  browse.py  package.json  pyproject.toml  run_task.py
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.github/instructions/: general-coding.instructions.md  python.instructions.md  typescript-react.instructions.md
browser_agent/: __init__.py  cli.py  display.py  intervention.py  keyboard.py  runner.py  session.py
docs/: interaction-spec.md  product_requirements_document.md  start-here.md
docs/adr/: index.md
docs/plans/: 2026-02-15-foundry-migration-design.md  2026-02-15-keyboard-shortcuts-design.md  2026-02-15-multi-turn-sessions-design.md
infra/: deploy-bicep.sh  deploy.sh  main.bicep  main.bicepparam  teardown.sh
tests/: conftest.py  test_azure_config.py  test_browser_visibility.py  test_display.py  test_intervention.py  test_keyboard.py  test_runner.py  test_session.py  test_type_suppressions.py
