[project]
name = "foundry-browser-use"
version = "0.1.0"
description = "AI browser automation using Browser Use and Microsoft Foundry"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.11.9",
    "langchain-openai>=1.1.9",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "prompt-toolkit>=3.0.50",
]

# Use dependency-groups (PEP 735) for dev dependencies - install with: uv sync --group dev
[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
